--- a/src/user/css/Profile.css
+++ b/src/user/css/Profile.css
@@ -20,7 +20,7 @@
 	border: transparent;
 	border: 4px solid #aaa;
 		margin-top: 50px;
-		overflow: scroll;
+		overflow: hidden;
 		text-align: center;
 		
 
