--- a/src/post/Posts.css
+++ b/src/post/Posts.css
@@ -4,14 +4,14 @@ color: gray;
 
 }
 .poster a{
-	margin: 14px;
+	margin: 10px;
 	display: inline-block;
 	padding: 0.25rem 0.75rem;
 	color: #fff;
-	width: 80px;
-	background-color:#ddd;
+	width: auto;
+	
 	text-decoration: none;
-	font-size: 1.5rem;
+	font-size: 0.8rem;
 	text-shadow: 0 2px 2px rgba(45,33,254,1);
 	transition: all 1s ease;
 
